<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/playComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_computer" />

    <Button
        android:id="@+id/playMultiOnDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_multi_device" />

    <Button
        android:id="@+id/playMultiOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_muli_online" />

</LinearLayout>